--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ hr {
   border-style: dashed;
 }
 body {
-  width: 90em;
+  width: 90rem;
   margin: 0 auto;
 }
 
@@ -150,3 +150,26 @@ img {
     margin-top: .625em;
   }
 }
+
+footer {
+  margin-top: 1.25em;
+  background: white;
+  padding: .625em;
+  border: .0625em solid gray;
+  box-shadow: inset 1px 1px 5px 1px black;
+
+ 
+  width: 100%;
+  height: 2.5em;
+}
+
+svg {
+  width: 40px;
+  height: 40px;
+
+}
+
+svg path {
+  fill: black;
+}
+
